<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/dp10"
    android:layout_marginRight="@dimen/dp10"
    android:layout_marginLeft="@dimen/dp10"
    app:cardCornerRadius="@dimen/dp5"
    app:cardElevation="@dimen/dp20"
    app:cardBackgroundColor="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp10">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                android:layout_alignParentLeft="true"
                android:id="@+id/dp"
                android:src="@drawable/dp"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/dp"
                android:id="@+id/name"
                android:text="John Marley"
                android:textSize="@dimen/sp14"
                android:layout_marginLeft="@dimen/dp10"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_of_post"
                android:layout_alignParentRight="true"
                android:text="Jan 15, 2018 01:55 am"
                android:textSize="@dimen/sp11"
                android:textColor="@color/tabtextcolor"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/post_content"
            android:text="@string/hintpost"
            android:textColor="@color/textcolr"
            android:layout_marginTop="@dimen/dp10"
            android:background="@color/white"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp2"
            android:background="@color/tabtextcolor"

            android:layout_marginTop="@dimen/dp6"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginTop="@dimen/dp10">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/no_of_likes"
                    android:text="5"
                    android:textColor="@color/tabtextcolor"
                    android:layout_marginRight="@dimen/dp3"
                    android:textSize="@dimen/dp12"
                    android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/like"
                android:text="@string/like"
                android:textColor="@color/tabtextcolor"
                android:textSize="@dimen/dp12"
                android:textStyle="bold"/></LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/share"
                android:text="@string/share"
                android:textColor="@color/tabtextcolor"
                android:textSize="@dimen/dp12"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>